feat: configurar despliegue en producción con Traefik + Cloudflare
- docker-compose.yml: integración con red traefik-public externa,
  backend solo expuesto internamente, labels Traefik en frontend
- nginx.conf: reverse proxy /api/* → backend:8080, cabeceras de
  seguridad HTTP (CSP, HSTS, X-Frame-Options, etc.)
- application.properties: secretos JWT, CORS y SSO desde env vars
- WebSecurityConfig: CORS origins inyectado via @Value
- auth.service.ts: URL relativa /api/auth (Nginx hace el proxy)
- angular.json + proxy.conf.json: proxy de desarrollo para ng serve
- .env.example: plantilla de variables para el servidor

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>